[gd_scene load_steps=6 format=1]

[ext_resource path="res://Game modes/Mahjong Solitaire/Game.gd" type="Script" id=1]
[ext_resource path="res://Game modes/Mahjong Solitaire/Camera Movement.tscn" type="PackedScene" id=2]
[ext_resource path="res://steel_diffuse.png" type="Texture" id=3]
[ext_resource path="res://steel_normal.png" type="Texture" id=4]

[sub_resource type="FixedMaterial" id=1]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = 0.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0.453125, 0.406054, 0.371704, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1.0
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 3 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal = ExtResource( 4 )
textures/normal_tc = 0
textures/shade_param_tc = 0

[node name="Game" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )
cursor = null

[node name="Second" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Camera Movement" parent="." instance=ExtResource( 2 )]

[node name="Layout" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
__meta__ = {
"_editor_clip_": 0
}

[node name="OmniLight" type="OmniLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.348998, 0.937124, 0, -0.937124, 0.348998, -40, 66.5762, -2.14617 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.001
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
params/radius = 200.0
params/attenuation = 1.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.348998, 0.937124, 0, -0.937124, 0.348998, 0, 33.9204, 9.10383 )
visibility/visible = false
layers = 1
params/enabled = false
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = true
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="SpotLight" type="SpotLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.906308, -0.365998, 0.211309, 0, 0.5, 0.866025, -0.422618, -0.784886, 0.453154, 13.75, 58.4553, 22.5 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 8.69
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
params/radius = 68.6158
params/attenuation = 1.0
params/spot_angle = 33.5786
params/spot_attenuation = 1.0

[node name="TestCube" type="TestCube" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 25, 0, 0, 0, 1, 0, 0, 0, 25, 0, -1, 0 )
layers = 1
geometry/visible = true
geometry/material_override = SubResource( 1 )
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="PanelContainer" type="PanelContainer" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 56.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 14.0
margin/right = 1906.0
margin/bottom = 92.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1892.0
margin/bottom = 25.0
custom_constants/separation = 20
alignment = 0

[node name="Counter Tile" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 214.0
margin/bottom = 25.0
text = "Tiles left: 144 of 144"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Counter Time" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 234.0
margin/top = 0.0
margin/right = 395.0
margin/bottom = 25.0
text = "Time passed: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Counter Click" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 415.0
margin/top = 0.0
margin/right = 500.0
margin/bottom = 25.0
text = "Clicks: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Counter Move" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 520.0
margin/top = 0.0
margin/right = 616.0
margin/bottom = 25.0
text = "Moves: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Counter Undo" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 636.0
margin/top = 0.0
margin/right = 731.0
margin/bottom = 25.0
text = "Undos: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer 2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 33.0
margin/right = 1892.0
margin/bottom = 78.0
alignment = 0

[node name="Undo" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 83.0
margin/bottom = 45.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Undo"
flat = false
align = 0

[node name="Hint" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 91.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 45.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Hint"
flat = false
align = 0

[node name="Shuffle" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 168.0
margin/top = 0.0
margin/right = 268.0
margin/bottom = 45.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Shuffle"
flat = false
align = 0

[node name="Seed label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 276.0
margin/top = 10.0
margin/right = 335.0
margin/bottom = 35.0
text = "Seed:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Seed edit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 343.0
margin/top = 0.0
margin/right = 507.0
margin/bottom = 45.0
text = "0"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 515.0
margin/top = 0.0
margin/right = 616.0
margin/bottom = 45.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false
align = 0

[connection signal="timeout" from="Second" to="." method="_on_Second_timeout"]

[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer 2/Undo" to="." method="_on_Undo_button_up"]

[connection signal="button_up" from="PanelContainer/VBoxContainer/HBoxContainer 2/Restart" to="." method="_on_Restart_button_up"]


